# megacustom

./: .gitignore  CMakeLists.txt  Makefile  MegaCustom-UI-Mockup.jsx  README.md  build.sh  claude.md  members_export.json  progress.md  test_file.txt  test_integrated.cpp
.github/workflows/: build-windows.yml
docs/: DEVELOPER_GUIDE.md  MASTER_IMPROVEMENT_PLAN.md  USER_GUIDE.md
docs/archive/: BUILD_REPORT.md  CHANGELOG.md  GUI_ARCHITECTURE.md  GUI_REQUIREMENTS.md  GUI_ROADMAP.md  INTEGRATION_HISTORY.md  PROGRESS.md  PROJECT_PHASES.md  QT_GUI_README.md  SESSION_19_SUMMARY.md  SESSION_RECOVERY.md  TODO.md  UI_UX_DESIGN.md
file-service/aDM5SGNaRk52MzA_KYxMUfoEcUBPcjJ_PaqT/: metadata-shm  metadata-wal
file-service/aDM5SGNaRk52MzCWskW52_ZJxo6_P4gBJ9yg/: metadata
file-service/aDM5SGNaRk52MzDmC5XpW3_euRiLHty_mR_B/: metadata-shm  metadata-wal
file-service/aEo3VVo2MWNpR00Zwjt1Oq3F7wec2ur2nO6v/: metadata-shm  metadata-wal
file-service/aEo3VVo2MWNpR03Qs2xmJI9OuSC8QE9IcuJn/: metadata-shm  metadata-wal
include/: MegaMock.h  MegaWrapper.h  json_simple.hpp
include/cli/: Command.h  CommandRegistry.h
include/core/: AppConstants.h  AuthenticationModule.h  ConfigManager.h  Crypto.h  Error.h  Guards.h  LogManager.h  MegaManager.h  MegaNodePtr.h  PathValidator.h  TransferListenerBase.h
include/features/: CloudCopier.h  DistributionPipeline.h  FolderMapper.h  MultiUploader.h  RegexRenamer.h  SmartSync.h  Watermarker.h
include/integrations/: MemberDatabase.h  WordPressSync.h
include/operations/: FileOperations.h  FolderManager.h
qt-gui/: CMakeLists.txt  CMakeLists_full.txt  CMakeLists_stub.txt  Dockerfile  build_qt.sh  create-full-portable.sh  demo_app.py  docker-compose.yml  docker_build.sh  test_build_structure.sh
qt-gui/MegaCustomGUI-full-portable/: MegaCustomGUI.desktop  run.sh
qt-gui/MegaCustomGUI-full-portable/resources/styles/: mega_light.qss
qt-gui/MegaCustomGUI-portable/: install-deps.sh  run.sh
qt-gui/resources/: app.manifest  app.rc  icons.qrc  megacustom.desktop
qt-gui/resources/styles/: mega_dark.qss  mega_light.qss
qt-gui/scripts/: build-windows-portable.bat  create-portable.sh
qt-gui/src/: main.cpp
qt-gui/src/accounts/: AccountManager.cpp  AccountManager.h  AccountModels.h  CredentialStore.cpp  CredentialStore.h  CrossAccountTransferManager.cpp  CrossAccountTransferManager.h  SessionPool.cpp  SessionPool.h  TransferLogStore.cpp  TransferLogStore.h
qt-gui/src/controllers/: AuthController.cpp  AuthController.h  CloudCopierController.cpp  CloudCopierController.h  DistributionController.cpp  DistributionController.h  FileController.cpp  FileController.h  FolderMapperController.cpp  FolderMapperController.h  MultiUploaderController.cpp  MultiUploaderController.h  SmartSyncController.cpp  SmartSyncController.h  TransferController.cpp  TransferController.h  TransferProgressListener.cpp  TransferProgressListener.h  WatermarkerController.cpp  WatermarkerController.h
qt-gui/src/dialogs/: AboutDialog.cpp  AboutDialog.h  AccountManagerDialog.cpp  AccountManagerDialog.h  AddDestinationDialog.cpp  AddDestinationDialog.h  BulkNameEditorDialog.cpp  BulkNameEditorDialog.h  BulkPathEditorDialog.cpp  BulkPathEditorDialog.h  ConflictResolutionDialog.cpp  ConflictResolutionDialog.h  CopyConflictDialog.cpp  CopyConflictDialog.h  DialogManager.cpp  DialogManager.h  DistributionRuleDialog.cpp  DistributionRuleDialog.h  LoginDialog.cpp  LoginDialog.h  MappingEditDialog.cpp  MappingEditDialog.h  RemoteFolderBrowserDialog.cpp  RemoteFolderBrowserDialog.h  ScheduleSyncDialog.cpp  ScheduleSyncDialog.h  SmartRouteReviewDialog.cpp  SmartRouteReviewDialog.h  SyncProfileDialog.cpp  SyncProfileDialog.h  WatermarkSettingsDialog.cpp  WatermarkSettingsDialog.h  WordPressConfigDialog.cpp  WordPressConfigDialog.h  WordPressSyncPreviewDialog.cpp  WordPressSyncPreviewDialog.h
qt-gui/src/main/: Application.cpp  Application.h  MainWindow.cpp  MainWindow.h  MainWindowSlots.cpp
qt-gui/src/scheduler/: SyncScheduler.cpp  SyncScheduler.h
qt-gui/src/search/: CloudSearchIndex.cpp  CloudSearchIndex.h  SearchQueryParser.cpp  SearchQueryParser.h
qt-gui/src/stubs/: AuthController.cpp  FileController.cpp  TransferController.cpp
qt-gui/src/styles/: DesignTokens.h  MegaProxyStyle.cpp  MegaProxyStyle.h  StyleSheetGenerator.cpp  StyleSheetGenerator.h  ThemeManager.cpp  ThemeManager.h
qt-gui/src/utils/: AnimationHelper.cpp  AnimationHelper.h  CloudPathValidator.cpp  CloudPathValidator.h  Constants.h  ContentRouter.cpp  ContentRouter.h  CopyHelper.cpp  CopyHelper.h  DpiScaler.h  IconProvider.cpp  IconProvider.h  MegaUploadUtils.h  MemberRegistry.cpp  MemberRegistry.h  MetricsStore.cpp  MetricsStore.h  OperationJobStore.cpp  OperationJobStore.h  PathUtils.h  Settings.cpp  Settings.h  TemplateExpander.cpp  TemplateExpander.h
qt-gui/src/widgets/: AccountSwitcherWidget.cpp  AccountSwitcherWidget.h  AdvancedSearchPanel.cpp  AdvancedSearchPanel.h  BannerWidget.cpp  BannerWidget.h  BreadcrumbWidget.cpp  BreadcrumbWidget.h  ButtonFactory.cpp  ButtonFactory.h  CircularProgressBar.cpp  CircularProgressBar.h  CloudCopierPanel.cpp  CloudCopierPanel.h  ContentManagerPanel.cpp  ContentManagerPanel.h  CrossAccountLogPanel.cpp  CrossAccountLogPanel.h  DistributionPanel.cpp  DistributionPanel.h  DownloaderPanel.cpp  DownloaderPanel.h  ElidedLabel.cpp  ElidedLabel.h  EmptyStateWidget.cpp  EmptyStateWidget.h  FileExplorer.cpp  FileExplorer.h  FileExplorerSlots.cpp  FolderMapperPanel.cpp  FolderMapperPanel.h  IconButton.cpp  IconButton.h  LoadingSpinner.cpp  LoadingSpinner.h  LogViewerPanel.cpp  LogViewerPanel.h  MegaSidebar.cpp  MegaSidebar.h  MemberRegistryPanel.cpp  (+25 more)
qt-gui/tools/: mega_ops.cpp
scripts/: BUILD-WINDOWS.bat  build-gui.ps1  build-sdk.ps1  build-windows-local.ps1  distribute_ff_hotseats.sh  download_manager.py  pdf_watermark.py  win-rebuild.ps1
src/: main.cpp
src/cli/: CommandRegistry.cpp
src/core/: AuthenticationModule.cpp  ConfigManager.cpp  Crypto.cpp  Error.cpp  LogManager.cpp  MegaManager.cpp  (+2 more)
tests/: CMakeLists.txt  PersistenceIntegrationTests.cpp  WatermarkerIntegrationTests.cpp
(+22 files in other folders)
